2023-09-02T00:34:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6055230639 # 1871
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-02
* notice: last 14d: unq all: 10 21
* notice: prev accum: outdated-unq outdated-all / unq all: 1546 5033 / 1560 5052
* notice: next accum: outdated-unq outdated-all / unq all: 1546 5033 / 1561 5054
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2023-09-01]

2023-09-01T08:10:12Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6047031229 # 1869
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-01
* notice: last 14d: unq all: 10 19
* notice: prev accum: outdated-unq outdated-all / unq all: 1546 5033 / 1559 5051
* notice: next accum: outdated-unq outdated-all / unq all: 1546 5033 / 1560 5052
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-09-01]

2023-09-01T00:38:16Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6043937310 # 1868
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-01
* notice: last 14d: unq all: 10 18
* notice: prev accum: outdated-unq outdated-all / unq all: 1545 5031 / 1559 5050
* notice: next accum: outdated-unq outdated-all / unq all: 1546 5033 / 1559 5051
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +4 +7 -0 -0 / 4 7
* notice: removed / changed dates: [2023-08-17] / [2023-08-31]

2023-08-31T16:09:53Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6039793014 # 1867