@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-09-02T00:34:13Z",
-  "count_outdated" : 5033,
-  "uniques_outdated" : 1546,
-  "count" : 5054,
-  "uniques" : 1561,
+  "timestamp" : "2023-09-02T08:08:38Z",
+  "count_outdated" : 5037,
+  "uniques_outdated" : 1550,
+  "count" : 5055,
+  "uniques" : 1562,
   "clones" : [
-    {
-      "timestamp": "2023-08-19T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 4 ],
-      "count_decinc": [ 0, 4 ],
-      "uniques": 4,
-      "uniques_minmax": [ 4, 4 ],
-      "uniques_decinc": [ 0, 4 ]
-    },
     {
       "timestamp": "2023-08-21T00:00:00Z",
       "count": 1,
@@ -76,6 +67,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-09-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
