@@ -1,12 +1,7 @@
 {
-  "count": 21,
-  "uniques": 10,
+  "count": 18,
+  "uniques": 6,
   "clones": [
-    {
-      "timestamp": "2023-08-19T00:00:00Z",
-      "count": 4,
-      "uniques": 4
-    },
     {
       "timestamp": "2023-08-21T00:00:00Z",
       "count": 1,
@@ -41,6 +36,11 @@
       "timestamp": "2023-09-01T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-09-02T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
