@@ -1,3 +1,12 @@
+2023-09-02T08:08:38Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6057236859 # 1872
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-02
+* notice: last 14d: unq all: 6 18
+* notice: prev accum: outdated-unq outdated-all / unq all: 1546 5033 / 1561 5054
+* notice: next accum: outdated-unq outdated-all / unq all: 1550 5037 / 1562 5055
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2023-08-19] / [2023-09-02]
+
 2023-09-02T00:34:13Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6055230639 # 1871
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-02
